<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:padding="15dp"
    tools:context=".ui.login.MainActivity">

    <ScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="50dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="50dp"
            android:paddingStart="22dp"
            android:paddingEnd="23dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ico_ap_logo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ap_bold"
                    android:text="@string/textview_login_email"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    app:hintTextColor="@color/background_login"
                    android:id="@+id/login_edittext_username"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:fontFamily="@font/ap_medium"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:padding="14dp"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ap_bold"
                    android:text="@string/textview_login_password"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:passwordToggleEnabled="true" />

                <com.google.android.material.textfield.TextInputLayout
                    app:hintTextColor="@color/background_login"
                    android:id="@+id/layoutTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Widget.Design.TextInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_background"
                        android:drawableStart="@drawable/ic_security"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/ap_medium"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:padding="14dp"
                        android:textColor="@android:color/white" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_login"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:background="@drawable/button_login_background_selector"
                android:fontFamily="@font/ap_bold"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ap_medium"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/login_text_detail" />

            <!-- Alt + Enter -->

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/viewLoading"
                style="@style/SpinKitView.Large.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:SpinKit_Color="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>

    <TextView
        android:id="@+id/appCode_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/appVersion_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/build_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/deviceID_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/oS_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />


</androidx.appcompat.widget.LinearLayoutCompat>
